# COA_FINAID_SUBS

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: analysis_variables.csv  descstat_variables.csv  headroom_measures.csv  model_specifications.csv  policy_exposure_designs.csv  policy_exposure_model_specifications.csv  policy_price_index.csv  policy_shocks.csv
docs/: data_decision_register.md  data_protocol.md  descriptive_decomposition.md  design_justification.md  estimator_validation.md  fixed_effects_baseline.md  headroom_measurement.md  headroom_measurement_audit.md  local_housing_cost_controls.md  metadata_glossary.md  model_review_tables.md  outlier_audit.md  policy_exposure_design.md  policy_exposure_estimates.md  policy_shocks.md  pre_estimation_readiness.md  replication.md  research_design.md  research_workflow.md  sample_dynamics.md  selectivity_index.md  variable_selection.md
notebooks/: 01_descstat_pre_post_winsorization.ipynb  table_exports.ipynb
scripts/: audit_extremes.py  audit_headroom_measures.py  audit_model_plan.py  audit_policy_shocks.py  audit_variable_config.py  build_descriptive_decomposition.py  build_descstat_tables.py  build_estimate_tables.py  build_fmr_control_estimates.py  build_local_housing_controls.py  build_manuscript_exhibit_data.py  build_model_samples.py  build_policy_event_study_table.py  build_policy_exposure_panels.py  build_report_figures.py  build_reviewer_tables.py  crosscheck_fixed_effects.py  download_hud_fmr.py  prepare_analysis_panel.py  run_fixed_effects.py  validate_fixed_effects_outputs.py
(+25 files in other folders)
