[project]
name = "coa-finaid-subs"
version = "0.1.0"
description = "Research code for COA headroom and financial-aid substitution analysis."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14",
  "python-docx>=1.1",
  "scipy>=1.10",
]

[project.optional-dependencies]
validation = [
  "linearmodels>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
